refactor: update index.html title and favicon, restructure App component with Navbar, Hero, and Highlights components

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,5 @@
 @import "tailwindcss";
 
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
-
 body {
 	color: white;
 	width: 100dvw;
@@ -20,7 +14,7 @@ canvas {
 	touch-action: none;
 }
 
-.scrim-max-width {
+.screen-max-width {
 	margin-inline-start: auto;
 	margin-inline-end: auto;
 	position: relative;
